--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,1 +1,8 @@
-<h1>Hi! The route for the main page was done!</h1>
+<div class="row main">
+  <div class="col-xs-12 col-sm-9 col-md-8 search-content">
+    <%= render 'searchbar' %>
+  </div>
+  <div class="col-xs-12 col-sm-3 col-md-4 analytics-sidebar">
+    <%= render 'analytics' %>
+  </div>
+</div>
