--- a/app/views/articles/_searchbar.html.erb
+++ b/app/views/articles/_searchbar.html.erb
@@ -1,8 +1,14 @@
-<div class="input-group input-group-lg">
-  <input type="text" autocomplete="off" class="form-control" placeholder="How can we help you?" />
-  <span class="input-group-btn">
-      <button class="btn btn-default" type="button">
-        <span class="glyphicon glyphicon-search"></span>
-      </button>
-  </span>
+<%= form_tag search_articles_path, method: :get do %>
+<div class="form-group row">
+  <div class="col-xs-12 col-sm-8 col-md-10">
+    <%= text_field_tag :query, params[:query], placeholder: "How can we help you?", autofocus: true,
+    class: 'form-control search-box input-lg' %>
+  </div>
+
+  <div class="col-xs-12 col-sm-4 col-md-2">
+    <%= button_tag(type: :submit, class: "btn btn-lg") do %>
+    <span class="glyphicon glyphicon-search"></span>
+    <% end %>
+  </div>
 </div>
+<% end %>
