--- a/app/views/articles/_analytics.html.erb
+++ b/app/views/articles/_analytics.html.erb
@@ -1,1 +1,12 @@
 <h1>Search analytics</h1>
+
+<ul class="list-group">
+  <% @searches.each do |search| %>
+
+  <li class="list-group-item">
+    <%= search.query %>
+    <span class="badge"><%= search.score %></span>
+  </li>
+
+  <% end %>
+</ul>
