--- a/app/views/articles/_searchbar.html.erb
+++ b/app/views/articles/_searchbar.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag search_articles_path, method: :get do %>
+<%= form_with url: search_articles_path, method: :get do %>
 <div class="form-group row">
   <div class="col-xs-12 col-sm-8 col-md-10">
     <%= text_field_tag :query, params[:query], placeholder: "How can we help you?", autofocus: true,
