Button to clear statistics

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,5 +10,7 @@
         <%= render partial: 'items', locals: { searches: searches } %>
       </div>
     </ul>
+    <%= link_to 'Clear stats', clear_path, data: { confirm: "Are you sure?" },
+                                           class: "btn btn-danger" %>
   </div>
 </div>
