--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,6 +11,6 @@
       </div>
     </ul>
     <%= link_to 'Clear stats', clear_path, data: { confirm: "Are you sure?" },
-                                           class: "btn btn-danger" %>
+                                           class: "btn btn-xs btn-danger" %>
   </div>
 </div>
